force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <description>Store the Voucher required to enroll and register for a class</description>
    <label>Voucher</label>
    <nameField>
        <displayFormat>VN {000000}</displayFormat>
        <label>Voucher Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voucher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>