force-app/main/default/objects/Voucher__c/fields/CC_Cart_Item__c.field-meta.xml
<CustomField>
    <fullName>CC_Cart_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CC Cart Item related to the purchase of this voucher</description>
    <label>CC Cart Item</label>
    <referenceTo>ccrz__E_CartItem__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>