force-app/main/default/objects/Voucher__c/fields/CC_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>CC_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Order Item</label>
    <referenceTo>ccrz__E_OrderItem__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>