force-app/main/default/objects/Voucher__c/fields/CC_Product__c.field-meta.xml
<CustomField>
    <fullName>CC_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>