force-app/main/default/objects/Voucher__c/fields/Class_Location__c.field-meta.xml
<CustomField>
    <fullName>Class_Location__c</fullName>
    <formula>ILT_Class__r.redwing__Location__r.Skedulo_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Class Location</inlineHelpText>
    <label>Class Location</label>
    <type>Text</type>
</CustomField>