force-app/main/default/objects/Voucher__c/fields/DO_NOT_DEPLOY_TEST__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_DEPLOY_TEST__c</fullName>
    <label>DO NOT DEPLOY TEST</label>
    <type>TextArea</type>
</CustomField>