force-app/main/default/objects/Voucher__c/fields/ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>ILT_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>