force-app/main/default/objects/Voucher__c/fields/Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Assigned</label>
    <type>Checkbox</type>
</CustomField>