force-app/main/default/objects/Voucher__c/fields/Is_My_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Voucher__c</fullName>
    <formula>IF( User__c =  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Voucher</label>
    <type>Checkbox</type>
</CustomField>