force-app/main/default/objects/Voucher__c/fields/Learner_Community_Class_URL__c.field-meta.xml
<CustomField>
    <fullName>Learner_Community_Class_URL__c</fullName>
    <formula>HYPERLINK($Label.Learner_Community_URL+&#39;/s/login?startURL=%2Flearner%2Fs%2Flearning-plan-detail-standard%3Fltui__urlRecordId%3D&#39;+Learning_Plan__c, &#39;Red Cross Learning Center&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learner Community Class URL</label>
    <type>Text</type>
</CustomField>