force-app/main/default/objects/Voucher__c/fields/Online_Class__c.field-meta.xml
<CustomField>
    <fullName>Online_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Class</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Voucher</relationshipLabel>
    <relationshipName>Voucher</relationshipName>
    <type>Lookup</type>
</CustomField>