force-app/main/default/objects/Voucher__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IF(OR(ILT_Class__c != null, Online_Class__c !=null) , 
HYPERLINK(Id , IMAGE(&quot;http://chart.apis.google.com/chart?cht=qr&amp;chs=150x150&amp;chl=&quot; &amp;QR_Code_Web_Address__c  , QR_Code_Web_Address__c )), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>