force-app/main/default/objects/Voucher__c/fields/RCO_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>RCO_Order_Id__c</fullName>
    <description>The Order Id is defined in DemandWare and used as a proxy to distinguish a specific RCO user session when browsing for and booking a class.  The Order Id is presumed to remain static throughout the entire customer RCO session.  The Order Id is used to identify a specific requestor for reserving/booking a class and allows the reservation service to be called multiple times during a single session (Idempotent).</description>
    <externalId>true</externalId>
    <label>RCO Order_Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>