force-app/main/default/objects/Voucher__c/fields/RCO_Reservation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>RCO_Reservation_Timestamp__c</fullName>
    <description>Used in time-dependent workflow rule which releases reserved seat back to inventory after one hour from this time</description>
    <label>RCO Reservation Timestamp</label>
    <type>DateTime</type>
</CustomField>