force-app/main/default/objects/Voucher__c/fields/Related_Order_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Related_Order_Contact_1__c</fullName>
    <formula>CC_Order_Item__r.Related_Contact_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Order Contact 1</label>
    <type>Text</type>
</CustomField>