force-app/main/default/objects/Voucher__c/fields/Start_Date_of_Class__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Class__c</fullName>
    <formula>TEXT(MONTH(ILT_Class__r.redwing__Start_Date__c))+&quot;/&quot; +
TEXT(DAY(ILT_Class__r.redwing__Start_Date__c))+&quot;/&quot; +
TEXT(YEAR(ILT_Class__r.redwing__Start_Date__c))+ 
&quot; - &quot; + 
ILT_Class__r.ltui__Start_Time_Formatted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date of Class</label>
    <type>Text</type>
</CustomField>