force-app/main/default/objects/Voucher__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the Voucher</description>
    <inlineHelpText>Current Status of Voucher</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
                <default>true</default>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Temp Hold</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Claimed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Pending Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>