force-app/main/default/objects/Voucher__c/fields/Voucher_Claim__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Claim__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Voucher Claim Number to be used by Learner to access a Course</inlineHelpText>
    <label>Voucher Claim #</label>
    <type>Text</type>
</CustomField>